--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
  
 @import "~bulma/sass/utilities/functions";
  
-@import "./styles/_custom_colors.scss";
+@import "./styles/custom_colors";
  
 $custom-colors: (
   "custom-green-darker": ($custom-green-darker),
